Implemented std::random_device for rand salt

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,6 +78,14 @@
         "valarray": "cpp",
         "variant": "cpp",
         "forward_list": "cpp",
-        "ranges": "cpp"
+        "ranges": "cpp",
+        "bitset": "cpp",
+        "complex": "cpp",
+        "set": "cpp",
+        "unordered_set": "cpp",
+        "regex": "cpp",
+        "shared_mutex": "cpp",
+        "cfenv": "cpp",
+        "typeindex": "cpp"
     }
 }
