--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -86,6 +86,11 @@
         "regex": "cpp",
         "shared_mutex": "cpp",
         "cfenv": "cpp",
-        "typeindex": "cpp"
+        "typeindex": "cpp",
+        "csignal": "cpp",
+        "hash_set": "cpp",
+        "strstream": "cpp",
+        "netfwd": "cpp",
+        "source_location": "cpp"
     }
 }
