--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.30.5)
 project(hazmat)
 
 # Specify the Argon2 include and library directories manually
+set(CMAKE_C_COMPILER clang)
+set(CMAKE_CXX_COMPILER clang++)
 set(ARGON2_INCLUDE_DIR /usr/local/include)
 set(ARGON2_LIBRARY /usr/lib/libargon2.so)  # or .a for static library
 
