--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,14 +7,11 @@ set(CMAKE_CXX_COMPILER clang++)
 set(ARGON2_INCLUDE_DIR /usr/local/include)
 set(ARGON2_LIBRARY /usr/lib/libargon2.so)  # or .a for static library
 set(CXX_STANDARD 23)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror")
 
 # Add your source files
 add_executable(hazmat
   src/main.cc
   src/setup.cc
   src/entry.cc
-  )
-
-# Link Argon2 to the executable
-target_include_directories(hazmat PRIVATE ${ARGON2_INCLUDE_DIR})
-target_link_libraries(hazmat PRIVATE ${ARGON2_LIBRARY})
+)
