--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_CXX_COMPILER clang++)
 set(ARGON2_INCLUDE_DIR /usr/local/include)
 set(ARGON2_LIBRARY /usr/lib/libargon2.so)  # or .a for static library
 set(CXX_STANDARD 23)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
 
 # Add your source files
 add_executable(hazmat
