--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ if (EXISTS ${CMAKE_BINARY_DIR}/compile_commands.json)
 endif()
 
 set(CMAKE_RULE_MESSAGES OFF)
-set(CMAKE_VERBOSE_MAKEFILE ON)
+#set(CMAKE_VERBOSE_MAKEFILE ON)
 
 # Add your source files
 add_executable(hazmat
@@ -29,4 +29,5 @@ add_executable(hazmat
   src/setup.cc
   src/entry.cc
   src/crypt.cc
+  src/help.cc
 )
