--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+argon2 = "0.5.3"
 base64 = "0.22.1"
 colored = "2.1.0"
 csv = "1.3.1"
+rpassword = "7.3.1"
